fix(frontend): Expose API to allocate / deallocate memory (#545)
* fix #544 Expose API to allocate / deallocate memory

Add unit test for Frontend#{allocateDirect, freeMemory}

Remove rocksdb.deb after installation

Signed-off-by: Li Zhanhui <lizhanhui@gmail.com>

* Fix format

Signed-off-by: Li Zhanhui <lizhanhui@gmail.com>

* Configure maven options

Signed-off-by: Li Zhanhui <lizhanhui@gmail.com>

* Fix Java17 compatibility

Signed-off-by: Li Zhanhui <lizhanhui@gmail.com>

---------

Signed-off-by: Li Zhanhui <lizhanhui@gmail.com>